--- a/pages/bout-us.html
+++ b/pages/bout-us.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../image/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/stylejs.css">
+    <meta name="description" content="Buy new fresh clothes and accesories for the incoming season, be fashion all year around with Godsmack. Don't miss our new products for the season. ">
+    <meta name="keywords" content="GODSMACK,CLOTHING,ACCESORIES,NEW,TRENDING,FASHION,SEASONAL,COMFORTABLE,JACKETS,SHIRTS,PANTS,HANDBAGS,BACKPACKS,T-SHIRTS">
+    <title>GODSMACK | CLOTHING AND FASHION | ABOUT US | SALES | SEASON</title>
 </head>
 <body>
     <header>
         <nav>
-            <section class="title">
-                <div><h1>Godsmack</h1></div>
+            <section>
+                <div><h1 class="title">Godsmack</h1></div>
             </section>
             
             <section class="navi">
@@ -30,7 +33,9 @@
     <main>
         <section class="aboutus">
             <img src="../image/bout us.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem aspernatur quod fuga optio dolores veniam eveniet! Necessitatibus voluptates eaque vel assumenda aspernatur, optio, autem ratione aut atque ipsam qui!</p>
+            <p>Godsmack itself is present in six countries: the United Kingdom, Russia, Switzerland, Belgium, Portugal and Spain. These subsidiaries target their respective national markets, taking into account specific local requirements and using the resources and global strategy of the brand.
+
+                The international launch of Godsmack in 2015 represents an excellent opportunity for all these countries. This development, which has started with the marketing of ‘small transportable goods’ is the first step.</p>
         </section>
     </main>
     <footer>
