--- a/pages/accesories.html
+++ b/pages/accesories.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Accesories</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="shortcut icon" href="../image/favicon-16x16.png" type="image/x-icon">
+        <meta name="description" content="Buy new fresh clothes and accesories for the incoming season, be fashion all year around with Godsmack. Don't miss our new products for the season, trending bracelets and authentic leather backpacks, never be out of trend again.">
+        <meta name="keywords" content="GODSMACK,CLOTHING,ACCESORIES,NEW,TRENDING,FASHION,SEASONAL,COMFORTABLE,JACKETS,SHIRTS,PANTS,HANDBAGS,BACKPACKS,T-SHIRTS">
+        <title>GODSMACK | CLOTHING AND FASHION | ACCESORIES | SALES | SEASON</title>
+        <link rel="stylesheet" href="../css/stylejs.css">
     </head>
     <body>
         <header>
             <nav>
-                <section class="title">
-                    <div><h1 class="please">Godsmack</h1></div>
+                <section>
+                    <div><h1 class="title">Godsmack</h1></div>
                 </section>
             
                 <section class="navi">
@@ -30,22 +33,22 @@
         <main>
             <section class="product">
                 <div><img src="../image/Acc 1.jpg" alt="">
-                <h2 class="producttxt">Product1</h2>
+                <h2 class="producttxt">Flowered black leather fanny pack $10.00 </h2>
                 </div>
                 <div><img src="../image/Acc 2.jpg" alt="">
-                    <h2 class="producttxt">Product2</h2>
+                    <h2 class="producttxt">Red leather hand stripped handbag $20.00</h2>
                 </div>
                 <div><img src="../image/Acc 3.jpg" alt="">
-                    <h2 class="producttxt">Product3</h2>
+                    <h2 class="producttxt">Duck yellow backpack $15.50</h2>
                 </div>
                 <div><img src="../image/Acc 4.jpg" alt="">
-                    <h2 class="producttxt">Product4</h2>
+                    <h2 class="producttxt">Black fanny pack zipper $5.00</h2>
                 </div>
                 <div><img src="../image/Acc 5.jpg" alt="">
-                    <h2 class="producttxt">Product5</h2>
+                    <h2 class="producttxt">Brown furr handbag $25.90</h2>
                 </div>        
                 <div><img src="../image/Acc 6.jpg" alt="">
-                    <h2 class="producttxt">Product6</h2>
+                    <h2 class="producttxt">Black & Red leather backpack $40.50</h2>
                 </div>
             </section>
         </main>
