--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../image/favicon-16x16.png" type="image/x-icon">
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Clothing</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/stylejs.css"/>
+    <meta name="description" content="Buy new fresh clothes and accesories for the incoming season, be fashion all year around with Godsmack. Don't miss our new products for the season, fresh dresses and cozzy jackets, don't choose between fashion and comfortable anymore.">
+    <meta name="keywords" content="GODSMACK,CLOTHING,ACCESORIES,NEW,TRENDING,FASHION,SEASONAL,COMFORTABLE,JACKETS,SHIRTS,PANTS,HANDBAGS,BACKPACKS,T-SHIRTS">
+    <title>GODSMACK | CLOTHING AND FASHION | CLOTHES | SALES | SEASON</title>
 </head>
 <body>
     <header>
         <nav>
-            <section class="title">
-                <div><h1 class="please">Godsmack</h1></div>
+            <section>
+                <div><h1 class="title">Godsmack</h1></div>
             </section>
             
             <section class="navi">
@@ -33,22 +37,22 @@
     <main>
         <section class="product">
             <div><img src="../image/product 1.jpg" alt="">
-            <h2 class="producttxt">Product1</h2>
+            <h2 class="producttxt">Wool gray sweater women $10</h2>
             </div>
             <div><img src="../image/product 2.jpg" alt="">
-                <h2 class="producttxt">Product2</h2>
+                <h2 class="producttxt">Black leather jacket women $40.90</h2>
             </div>
             <div><img src="../image/Product 3.jpg" alt="">
-                <h2 class="producttxt">Product3</h2>
+                <h2 class="producttxt">Light pink jacket women $15.80</h2>
             </div>
             <div><img src="../image/product 4.jpg" alt="">
-                <h2 class="producttxt">Product4</h2>
+                <h2 class="producttxt">black jacket women $15.80</h2>
             </div>
             <div><img src="../image/Product5.jpg" alt="">
-                <h2 class="producttxt">Product5</h2>
+                <h2 class="producttxt">Black Drop Hem Dress $15.98 </h2>
             </div>        
             <div><img src="../image/product 6.jpg" alt="">
-                <h2 class="producttxt">Product6</h2>
+                <h2 class="producttxt"> JoggersY2K Baggy Pants $30.98</h2>
             </div>
         </section>
     </main>
