--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="shortcut icon" href="../image/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Buy new fresh clothes and accesories for the incoming season, be fashion all year around with Godsmack. Don't miss our new products for the season, get in touch with us and let us know what you think!">
+    <meta name="keywords" content="GODSMACK,CLOTHING,ACCESORIES,NEW,TRENDING,FASHION,SEASONAL,COMFORTABLE,JACKETS,SHIRTS,PANTS,HANDBAGS,BACKPACKS,T-SHIRTS">
+    <title>GODSMACK | CLOTHING AND FASHION | CONTACT US | SOCIAL MEDIA | SEASON</title>
+    <link rel="stylesheet" href="../css/stylejs.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
     <header>
         <nav>
-            <section class="title2">
+            <section>
                 <div>
-                    <h1 class="please">Godsmack</h1>
+                    <h1 class="title">Godsmack</h1>
                 </div>
             </section>
 
@@ -37,9 +41,7 @@
         <section class="contact">
             <div class="text">
                 <h1>Contact us!</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde labore dolore pariatur, ipsum
-                    excepturi laboriosam nesciunt id laborum aliquid, ea, voluptatem dolores ab. Eius saepe animi
-                    exercitationem ab, autem impedit!</p>
+                <p>Let us know a bit about you so you can stay in the mix with the latest releases, upcoming campaigns, and deals. </p>
             </div>
             <section class="formthing">
                 <form>
