Ultima update responsive

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -24,7 +24,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="navi">
                 <div>
                     <ul class="ref">
                         <li><a href="../index.html">Home</a></li>
